Fixed rewards section spacing

--- a/css/resume.css
+++ b/css/resume.css
@@ -44,16 +44,16 @@ li {
 .awards-acheivements {
     display: flex;
     flex-direction: column;
-    margin-bottom: 40px;
 }
 
 .awards-acheivements-content {
-    display: flex;
-    flex-direction: row;
-    background-color: blueviolet;
-    margin-top: 0px;
+    padding-top: 0px;
 }
 
-.awards-acheivements .year ul{
+.awards-acheivements-content ul {
+    display: inline-block;
+    *display: inline;
+    margin-top: 0px;
     padding-left: 0px;
+    padding-right: 42px;
 }
